--- a/rbac/package.json
+++ b/rbac/package.json
@@ -33,6 +33,7 @@
     "simplemde": "^1.11.2",
     "sortablejs": "^1.7.0",
     "tinymce": "^4.7.4",
+    "view-design": "^4.2.0",
     "vue": "^2.5.13",
     "vue-router": "^3.0.1",
     "vue-virtual-scroller": "^0.10.6",
