--- a/rbac/package.json
+++ b/rbac/package.json
@@ -8,7 +8,8 @@
     "dev": "webpack-dev-server --content-base ./ --open --inline --hot --compress --config build/webpack.dev.config.js",
     "build": "webpack --progress --hide-modules --config build/webpack.prod.config.js",
     "lint": "eslint --fix --ext .js,.vue src",
-    "test": "npm run lint"
+    "test": "npm run lint",
+    "server": "live-server ./"
   },
   "repository": {
     "type": "git",
